<resources>
    <string name="app_name">VideoRecord</string>
    <string name="record">视频录制</string>
    <string name="view">视频库</string>
    <string name="start">开始录制</string>
    <string name="stop">结束录制</string>
    <string name="nothing">还未录制任何视频</string>
    <string name="video_name">文件名称</string>
    <string name="video_duration">录制时长</string>
    <string name="video_size">录制大小</string>
    <string name="video_time">录制时间</string>
    <string name="video_library">视频库</string>
</resources>
