<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/iv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/icn_play_small"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/video_name"/>

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/video_duration"/>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/video_time"/>

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/video_size"/>

        </LinearLayout>
    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/tv_name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:padding="10dp"-->
    <!--android:text="@string/video_name"/>-->

</LinearLayout>